--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -11,3 +11,6 @@
 @import '~@fortawesome/fontawesome-free/scss/solid';
 @import '~@fortawesome/fontawesome-free/scss/regular';
 @import '~@fortawesome/fontawesome-free/scss/brands';
+
+
+@import "top";
