Jtinder画像非表示不具合修正

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -21305,6 +21305,7 @@ readers do not read off random characters that represent icons */
   flex-direction: column;
   justify-content: space-between;
   text-align: center;
+  align-items: center;
 }
 
 .loginPage_contents_title {
