レイアウト画面微調整

--- a/resources/sass/_top.scss
+++ b/resources/sass/_top.scss
@@ -5,6 +5,7 @@
       flex-direction: column;
       justify-content: space-between;
       text-align: center;
+      align-items: center;
       &_title {
         margin-top: 12vh;
       }
