スワイプ後結果表示

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -21794,3 +21794,12 @@ body {
   color: #dccbcb;
 }
 
+#resultForm {
+  text-align: center;
+  text-decoration: none;
+}
+
+#resultForm li {
+  list-style: none;
+}
+
