--- a/public/css/app.css
+++ b/public/css/app.css
@@ -21559,6 +21559,29 @@ body {
   padding: 0;
   margin: 0;
   position: relative;
+  background: url(/images/1746.png?d4467efd96da93570cdc80353cb82125);
+  -webkit-animation: bgiLoop 5s linear infinite;
+          animation: bgiLoop 5s linear infinite;
+}
+
+@-webkit-keyframes bgiLoop {
+  0% {
+    background-position: 0 0;
+  }
+
+  100% {
+    background-position: -960px 960px;
+  }
+}
+
+@keyframes bgiLoop {
+  0% {
+    background-position: 0 0;
+  }
+
+  100% {
+    background-position: -960px 960px;
+  }
 }
 
 /* Wrapper with padding */
