--- a/resources/sass/_jTinder.scss
+++ b/resources/sass/_jTinder.scss
@@ -3,6 +3,14 @@ html, body {
     padding: 0;
     margin: 0;
     position: relative;
+
+    background: url("../../storage/app/public/images/1746.png");
+    animation: bgiLoop 5s linear infinite;
+}
+
+@keyframes bgiLoop {
+    0% { background-position: 0 0;}
+    100% { background-position: -960px 960px;}
 }
 
 /* Wrapper with padding */
