loading画面実装中

--- a/resources/sass/_jTinder.scss
+++ b/resources/sass/_jTinder.scss
@@ -4,7 +4,7 @@ html, body {
     margin: 0;
     position: relative;
 
-    background: url("../../storage/app/public/images/1746.png");
+    background: url("../../public/images/candy.png");
     animation: bgiLoop 5s linear infinite;
 }
 
