--- a/resources/sass/_top.scss
+++ b/resources/sass/_top.scss
@@ -6,6 +6,7 @@
       justify-content: space-between;
       text-align: center;
       align-items: center;
+      position: relative;
       &_title {
         margin-top: 12vh;
       }
