--- a/resources/sass/_loader.scss
+++ b/resources/sass/_loader.scss
@@ -11,10 +11,9 @@
 
 #loader {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background-color: #00c2bc;
-    position:absolute;
-    top:0;
+    display: block;
 }
 
 #loader.loaded {
@@ -23,16 +22,15 @@
 
 
 .sk-circle {
-    margin: 100px auto;
-    width: 40px;
-    height: 40px;
-    position: relative;
+
+    position: absolute;
+    top: 0;
+    z-index:100;
   }
   .sk-circle .sk-child {
     width: 100%;
     height: 100%;
     position: absolute;
-    left: 0;
     top: 0;
   }
   .sk-circle .sk-child:before {
