--- a/public/css/app.css
+++ b/public/css/app.css
@@ -21597,6 +21597,7 @@ body {
 
 .container.slide {
   position: relative;
+  z-index: 1;
 }
 
 #tinderslide {
@@ -21861,9 +21862,6 @@ body {
 }
 
 #loader {
-  width: 100%;
-  height: 100%;
-  background-color: #00c2bc;
   display: block;
 }
 
@@ -21872,147 +21870,44 @@ body {
           animation: fadeOut 3s forwards;
 }
 
-.sk-circle {
+.loading {
+  width: 160px;
+  height: 160px;
+  border-radius: 150px;
+  border: 15px solid #fff;
+  border-top-color: rgba(0, 0, 0, 0.3);
+  box-sizing: border-box;
   position: absolute;
-  top: 0;
+  top: 50%;
+  left: 50%;
+  margin-top: -80px;
+  margin-left: -80px;
+  animation: loading 1.2s linear infinite;
+  -webkit-animation: loading 1.2s linear infinite;
   z-index: 100;
 }
 
-.sk-circle .sk-child {
-  width: 100%;
+@keyframes loading {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@-webkit-keyframes loading {
+  0% {
+    -webkit-transform: rotate(0deg);
+  }
+
+  100% {
+    -webkit-transform: rotate(360deg);
+  }
+}
+
+html {
   height: 100%;
-  position: absolute;
-  top: 0;
-}
-
-.sk-circle .sk-child:before {
-  content: "";
-  display: block;
-  margin: 0 auto;
-  width: 15%;
-  height: 15%;
-  background-color: #333;
-  border-radius: 100%;
-  -webkit-animation: sk-circleBounceDelay 1.2s infinite ease-in-out both;
-  animation: sk-circleBounceDelay 1.2s infinite ease-in-out both;
-}
-
-.sk-circle .sk-circle2 {
-  transform: rotate(30deg);
-}
-
-.sk-circle .sk-circle3 {
-  transform: rotate(60deg);
-}
-
-.sk-circle .sk-circle4 {
-  transform: rotate(90deg);
-}
-
-.sk-circle .sk-circle5 {
-  transform: rotate(120deg);
-}
-
-.sk-circle .sk-circle6 {
-  transform: rotate(150deg);
-}
-
-.sk-circle .sk-circle7 {
-  transform: rotate(180deg);
-}
-
-.sk-circle .sk-circle8 {
-  transform: rotate(210deg);
-}
-
-.sk-circle .sk-circle9 {
-  transform: rotate(240deg);
-}
-
-.sk-circle .sk-circle10 {
-  transform: rotate(270deg);
-}
-
-.sk-circle .sk-circle11 {
-  transform: rotate(300deg);
-}
-
-.sk-circle .sk-circle12 {
-  transform: rotate(330deg);
-}
-
-.sk-circle .sk-circle2:before {
-  -webkit-animation-delay: -1.1s;
-  animation-delay: -1.1s;
-}
-
-.sk-circle .sk-circle3:before {
-  -webkit-animation-delay: -1s;
-  animation-delay: -1s;
-}
-
-.sk-circle .sk-circle4:before {
-  -webkit-animation-delay: -0.9s;
-  animation-delay: -0.9s;
-}
-
-.sk-circle .sk-circle5:before {
-  -webkit-animation-delay: -0.8s;
-  animation-delay: -0.8s;
-}
-
-.sk-circle .sk-circle6:before {
-  -webkit-animation-delay: -0.7s;
-  animation-delay: -0.7s;
-}
-
-.sk-circle .sk-circle7:before {
-  -webkit-animation-delay: -0.6s;
-  animation-delay: -0.6s;
-}
-
-.sk-circle .sk-circle8:before {
-  -webkit-animation-delay: -0.5s;
-  animation-delay: -0.5s;
-}
-
-.sk-circle .sk-circle9:before {
-  -webkit-animation-delay: -0.4s;
-  animation-delay: -0.4s;
-}
-
-.sk-circle .sk-circle10:before {
-  -webkit-animation-delay: -0.3s;
-  animation-delay: -0.3s;
-}
-
-.sk-circle .sk-circle11:before {
-  -webkit-animation-delay: -0.2s;
-  animation-delay: -0.2s;
-}
-
-.sk-circle .sk-circle12:before {
-  -webkit-animation-delay: -0.1s;
-  animation-delay: -0.1s;
-}
-
-@-webkit-keyframes sk-circleBounceDelay {
-  0%, 80%, 100% {
-    transform: scale(0);
-  }
-
-  40% {
-    transform: scale(1);
-  }
-}
-
-@keyframes sk-circleBounceDelay {
-  0%, 80%, 100% {
-    transform: scale(0);
-  }
-
-  40% {
-    transform: scale(1);
-  }
 }
 
