--- a/resources/sass/_resultForm.scss
+++ b/resources/sass/_resultForm.scss
@@ -6,5 +6,22 @@
 
     & li{
         list-style: none;
+        display: flex;
+        flex-direction: column;
+
+        & h2{
+            margin: 10px 0px;
+        }
+    }
+
+    & img{
+        width: 200px;
+        height:200px;
+        margin: 0 auto;
+    }
+
+    & ul.recommend{
+        background-color:rgb(255, 255, 255);
+        border-radius: 5%;
     }
 }
